--- a/cavernaEscura.html
+++ b/cavernaEscura.html
@@ -10,11 +10,7 @@
 </head>
 
 <body>
-    <style id="fundo">
-        body {
-          background-image: url("/imagens_jogo_a20/cavernaSombria.jpg");
-        }
-    </style>
+    
     
     <header class="cabeca">
         <div class="intro">
@@ -36,8 +32,8 @@
         </div>
 
         <div class="escolhas">
-            <button class="botao1" id="btn-1">Start</button>
-            <button class="botao2" id="btn-2">Começa</button> 
+            <button class="bt" id="btn-1">Start</button>
+            <button class="bt" id="btn-2">Começa</button> 
         </div>
 
 
